= CHANGES

== 0.14.0 (2017-03-15)
- NEW #2120 enable cascading with Rack application (@namusyaka)
- FIX lock rake < 11.0 to avoid last_comment error (@namusyaka)
- FIX handle nil database passwords for create_db and drop_db (@phallstrom)
- FIX #2119 add rake gem tasks to gem project Rakefile
- NEW support Erubi ERB engine (@adam12)
- FIX #2125 do not load in cycle files excluded from reloading

== 0.14.0.rc2 (2017-01-19)
- FIX #2109 change the format of session_id for Padrino Admin AccessControl
- WARN #2109 Existing sessions will be dropped
- FIX #2097 Use exe folder for application executables (@adam12)
- FIX #2105 Run bundle with --binstubs on -b switch (@adam12)
- FIX #2111 disallow conflicting project names
- NEW remove deprecations planned for 0.14.0
- NEW stop managing Ruby default encodings
  Default Encoding.default_internal is now nil (Ruby default) instead of UTF-8 (Padrino < 0.14 default)
- FIX #2113 properly override default values in route definitions if parameter is present (@fidalgo)
- FIX #2116 fix plugin list `padrino g plugin -l` (@fnordfish)

== 0.14.0.rc1 (2016-11-02)
- NEW remove the requirement of ActiveSupport (export AS_VERSION=X.0 to put it back)

== 0.13.3.3 (2016-11-02)
- FIX #2075 cache actual content_type mime type
- FIX #2081 remove -i option from pg_dump command (@dfens)
- FIX #2083 be able to create sqlite's file to deep tree of subdirectories (@kkarakawa)
- NEW dynamically list supported renderers (@jfredrickson)

== 0.13.3.2 (2016-09-06)
- FIX #2071 regression of #1906
- FIX running padrino without Gemfile
- NEW alias db:create for sequel adapter

== 0.13.3.1 (2016-08-30)
- NEW support usage of partials without view path

== 0.13.3 (August 17th 2016)

- FIX #1785 Nested forms and helpers with ERB and Erubis (@ujifgc)
- FIX #1847 Shoulda on modern rubies
- NEW #1851 Remove RightJS, Riot, Steak support (@ujifgc)
- FIX #1872 Implement using partials without Sinatra (@ujifgc)